Fix foreground color to increase contrast

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -91,14 +91,14 @@ a {
 button {
   cursor: pointer;
   background: var(--bg-status);
-  color: var(--fg-status);
+  color: var(--fg);
   border: 0;
   padding: 0.5rem 1rem;
 }
 
 select {
   background: var(--bg);
-  color: var(--fg-status);
+  color: var(--fg);
   border: var(--thin-stroke) solid var(--bg-status);
   padding: 0.5rem;
   margin-right: 1rem;
